# anicart-streaming-platform

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: deploy.yml
ai_service/: main.py
analytics_service/: go.mod  main.go
backend/: Dockerfile  index.js  package-lock.json  package.json
backend/prisma/: schema.prisma  seed.js
backend/prisma/migrations/20260613193706_init/: migration.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Chatbot.tsx  Footer.jsx  Navbar.jsx
frontend/src/pages/: Admin.jsx  BlogPost.jsx  Blogs.jsx  Contacts.jsx  Home.jsx  Login.jsx  Movie.jsx  Payment.jsx  Privacy.jsx  Recommend.jsx  Signup.jsx  Subscription.jsx  Terms.jsx
search_module/: Cargo.toml
search_module/src/: lib.rs
