[package]
name = "search_module"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast WebAssembly search indexing module for AniCart"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.10.0"
